# vre-jupyterlab-extension

./: LICENSE  MANIFEST.in  README.md  RELEASE.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_docs.txt  setup.cfg  setup.py
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: deploy-docs.yml  extension-nightly-integration.yml  extension-pr-ci.yml  extension-publish.yml  release-pr-checklist.yml
dist_tmp/: vre_jupyterlab_extension-0.1.7-py3-none-any.whl
docs/: development.md  extension.md  index.md  installation.md  release-process.md  statistics.md
docs/architecture/: execution-guard.md  mime-sync.md  project-structure.md  syntax-highlighting.md
labextension/: package.json
labextension/schemas/@virtmat/vre-jupyterlab-extension/: package.json.orig
labextension/static/: 716.bf936c8037bccbbdd197.js  remoteEntry.0454d7708daaf10e4a47.js  remoteEntry.221629462c787975bc8a.js  remoteEntry.4c195f82cb21357fc276.js  remoteEntry.8ff8991a9eadd9dfbd2c.js
scripts/: release.py
site/: 404.html  index.html
site/architecture/execution-guard/: index.html
site/architecture/mime-sync/: index.html
site/architecture/project-structure/: index.html
site/architecture/syntax-highlighting/: index.html
site/development/: index.html
site/installation/: index.html
site/release-process/: index.html
site/search/: search_index.json
site/statistics/: index.html
src/: index.ts
src/config/: constants.ts
src/execution/: execution-guard.ts
src/notebook/: mime-sync.ts
style/: index.css  logo.css
tests/: test-results.tap
vre_jupyterlab_extension/: __init__.py
vre_jupyterlab_extension.egg-info/: PKG-INFO  SOURCES.txt
vre_jupyterlab_extension/labextension/: package.json
vre_jupyterlab_extension/labextension/schemas/@virtmat/vre-jupyterlab-extension/: package.json.orig
vre_jupyterlab_extension/labextension/schemas/vre-jupyterlab-extension/: package.json.orig  plugin.json
vre_jupyterlab_extension/labextension/static/: 453.7fb2f0e7a5c9bd16bf24.js  453.c4ce61d261926d677167.js  453.dab49c41ac131902e872.js  665.30c03cb063a73636defb.js  665.ab298fd85b6e2eaecc98.js  716.0563bfcde5271af77064.js  716.2eadcf6540ae776e8ae9.js  716.35834f491d7e85652a24.js  716.3b559bceac46ea77099a.js  716.6938d3ae97010fafd24a.js  remoteEntry.06ce0d0cbfaed2163b98.js  remoteEntry.0bb124cc4dd1554b709d.js  remoteEntry.42ed17c4b7ed873d948b.js  remoteEntry.4421724ec6e4ffb404e5.js  remoteEntry.5a1a1433b6c68c0258ea.js  remoteEntry.7add8c57e7ac542950b8.js  remoteEntry.82e234efe0d08dae0ba4.js  remoteEntry.a5a6c12a1638dfdae392.js  remoteEntry.c3b5ad961c5c6fa55576.js  style.js
