[metadata]
name = vre-jupyterlab-extension
version = 0.1.3
description = VRE JupyterLab Extension with VRE DSL highlighting and notebook execution guard
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
author = VRE Team
maintainer = VRE Team
keywords = jupyterlab, extension, vre, virtmat
url = https://github.com/officiallygod/vre-jupyterlab-extension
project_urls = 
	Source = https://github.com/officiallygod/vre-jupyterlab-extension
	Tracker = https://github.com/officiallygod/vre-jupyterlab-extension/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Framework :: Jupyter
	Framework :: Jupyter :: JupyterLab
	Framework :: Jupyter :: JupyterLab :: 4
	Framework :: Jupyter :: JupyterLab :: Extensions
	Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Intended Audience :: Developers
	Topic :: Software Development :: Libraries :: Application Frameworks
[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.10
install_requires = 
	jupyterlab>=4.2,<5

[options.packages.find]
where = .
include = 
	vre_jupyterlab_extension*

